--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <!-- ТЕМПЛЕЙТЫ -->
 
     <template class="preloader-template">
-      <div class="preloader">
+      <div class="preloader"> <!--8 шаг!!-->
         <div class="preloader-chasing-squares">
           <div class="square"></div>
           <div class="square"></div>
